# assurance-forge

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  cmake_test_discovery_59830ebc3a.json  issue-body.md
.github/workflows/: release.yml
data/: oasc-ja.xml  open-autonomy-safety-case.sacm.xml  open-autonomy-safety-case.sacm2.xml  open-autonomy-safety-case.updated.v2.sacm.xml  sample.sacm.xml  sccg_guidelines.tsv
docs/: RELEASING.md  ROADMAP.md
src/app/: app_runtime.cpp  app_runtime.h  main.cpp  platform_win32_dx11.cpp  platform_win32_dx11.h  welcome_modal.cpp  welcome_modal.h
src/core/: app_state.cpp  app_state.h  assurance_tree.cpp  assurance_tree.h  element_factory.cpp  element_factory.h  sccg_review.cpp  sccg_review.h
src/parser/: xml_parser.cpp  xml_parser.h
src/sacm/: sacm_model.h  sacm_model.h.bak  sacm_parser.cpp  sacm_parser.h  sacm_serializer.cpp  sacm_serializer.h
src/ui/: element_context_menu.h  element_panel.cpp  element_panel.h  gsn_adapter.cpp  gsn_adapter.h  gsn_canvas.cpp  gsn_canvas.h  gsn_canvas_renderer.cpp  gsn_canvas_renderer.h  gsn_layout.cpp  gsn_layout.h  gsn_model.h  register_views.cpp  register_views.h  sccg_panel.cpp  sccg_panel.h  theme.cpp  theme.h  tree_view.cpp  tree_view.h  ui_state.cpp  ui_state.h
src/ui/gsn/: gsn_canvas.cpp  gsn_canvas.h  gsn_canvas_renderer.cpp  gsn_canvas_renderer.h
src/ui/panels/: project_files_panel.cpp  project_files_panel.h  welcome_modal.cpp  welcome_modal.h
tests/: test_assurance_tree.cpp  test_element_factory.cpp  test_layout.cpp  test_sacm_roundtrip.cpp  test_xml_parser.cpp
tests/data/: fixture_roundtrip_core_argument.sacm.xml  fixture_roundtrip_sanitized_strict.sacm.xml
